<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageHeader"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:text="@string/header_text"
        android:textColor="@color/header_color"
        android:textSize="@dimen/Textsize_medium"
        app:layout_constraintBottom_toBottomOf="@+id/imageHeader"
        app:layout_constraintEnd_toEndOf="@+id/imageHeader"
        app:layout_constraintStart_toStartOf="@+id/imageHeader"
        app:layout_constraintTop_toTopOf="@+id/imageHeader" />

    <TextView
        android:id="@+id/tvMemberName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/member_name_text"
        android:textSize="@dimen/Textsize_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageHeader" />

    <EditText
        android:id="@+id/edMemberName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/ed_member_name_text"
        android:inputType="text"
        android:textSize="@dimen/Textsize_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMemberName" />

    <TextView
        android:id="@+id/tvKoleksiyonCins"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/koleksiyon_cinsi_text"
        android:textSize="@dimen/Textsize_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edMemberName" />

    <TextView
        android:id="@+id/tvDegisenCins"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/degisen_cins"
        android:textSize="@dimen/Textsize_small"
        app:layout_constraintEnd_toStartOf="@+id/btnCins"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvKoleksiyonCins" />

    <Button
        android:id="@+id/btnCins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/button_color"
        android:padding="@dimen/size_xsmall"
        android:text="@string/koleksiyon_cins_button"
        android:textSize="@dimen/Textsize_small"
        app:cornerRadius="@dimen/size_xsmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvKoleksiyonCins" />

    <TextView
        android:id="@+id/tvKoleksiyonDurum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/koleksiyon_durumu_text"
        android:textSize="@dimen/Textsize_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDegisenCins" />

    <TextView
        android:id="@+id/tvDegisenDurum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/degisen_durum"
        android:textSize="@dimen/Textsize_small"
        app:layout_constraintEnd_toStartOf="@+id/btnDurum"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvKoleksiyonDurum" />

    <Button
        android:id="@+id/btnDurum"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/button_color"
        android:padding="@dimen/size_xsmall"
        android:text="@string/koleksiyon_durumu_button"
        android:textSize="@dimen/Textsize_small"
        app:cornerRadius="@dimen/size_xsmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvKoleksiyonDurum" />

    <Button
        android:id="@+id/btnPaylas"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/button_color"
        android:padding="@dimen/size_xsmall"
        android:text="@string/paylas_button"
        android:textSize="@dimen/Textsize_small"
        app:cornerRadius="@dimen/size_xsmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDurum" />

    <ListView
        android:id="@+id/lvKoleksiyonListesi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:entries="@array/koleksiyon_listesi"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPaylas" />

</androidx.constraintlayout.widget.ConstraintLayout>